# django-blocknote

./: .coveragerc  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  README.rst  debug.sh  dev-setup.sh  dev-setup_migr_error.sh  dev-start.sh  pyproject.toml  readthedocs.yaml  tox.ini  version.toml
.github/: .git-commit-template.txt
.github/scripts/: update_changelog.py
.github/workflows/: canary_PR.yaml  main_PR.yaml  prod_PR.yaml  release.yaml  staging_PR.yaml
django_blocknote/: __init__.py  admin.py  apps.py  assets.py  fields.py  forms.py  helpers.py  mixins.py  models.py  urls.py  views.py  widgets.py
django_blocknote/migrations/: 0001_initial.py  0003_documenttemplate.py
django_blocknote/templates/django_blocknote/: blocknote.html
django_blocknote/templatetags/: blocknote_tags.py
docs/source/: conf.py  index.rst
docs/source/explanation/: document-template-system.md  index.rst  vite_integration_docs.md
docs/source/how-to-guides/: doc-template-config.md  doc-templates.md  index.rst  nodejs_installation_guide.md  quickstart.md  quickstart.rst
docs/source/reference/: api.rst  document-template-config.md  document-templates.md  index.rst
docs/source/tutorials/: getting-started.md  index.rst
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  webpack.config.js
frontend/src/: blocknote.js  blocknote.ts  django-styles.css  editor.js  widget.js
frontend/src/config/: menu-config.ts  menu-config.tsx
frontend/src/core/: dom-scanner.js  dom-scanner.ts  editor.js  editor.tsx  slash-menu.tsx  widget-manager.js  widget-manager.ts
frontend/src/hooks/: index.ts  useBlockNoteImageRemoval.ts  useBlockNoteImageUpload.ts  useBlockNoteUpload.ts
frontend/src/internal/: csrf-helpers.ts
frontend/src/styles/: blocknote.css  django_styles.css
scripts/: build-dev.sh  build-for-release.sh  build-production.sh
tests/backend/: 0_test_fields.py  test_fields.py
(+24 files in other folders)
